--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>Groupe IGS - Test de Positionnement - Compétences </title>
+    <title>Ontologie Projet Transport </title>
     <link href="{% static "style.css"%}" rel="stylesheet" type="text/css" >
     <link rel="icon" type="image/png" href="{% static "img/truck.png"%}"/>
 
@@ -22,7 +22,7 @@
             <ul class="nav-links">
                 <li><a href={% url 'index' %}>Accueil</a></li>
                 <li><a href={% url 'contact' %}>Contact</a></li>
-                <li><a href={% url 'faq' %}>FAQ</a></li>
+                <li><a href={% url 'faq' %}>QA</a></li>
             </ul>
         </nav>
         
