--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -27,10 +27,10 @@
         </nav>
         
         <div class="content">
-            <h1>Welcome to Our Search Engine </h1>
+            <h1>Bienvenue dans le moteur de recherche  </h1>
             <form>
                 <input type='text' placeholder="Type a keyword">
-                <button type="submit">Find a Place</button> 
+                <button type="submit">Tapez pour chercher ... </button> 
             </form>
         </div>
     </div>
