--- a/main/templates/main/faq.html
+++ b/main/templates/main/faq.html
@@ -22,7 +22,7 @@
         <ul class="nav-links">
             <li><a href={% url 'index' %}>Accueil</a></li>
             <li><a href={% url 'contact' %}>Contact</a></li>
-            <li><a href={% url 'faq' %}>FAQ</a></li>
+            <li><a href={% url 'faq' %}>QA</a></li>
         </ul>
     </nav>   
 </div>
